data/derived/comb/progs/unify/prog0016.ml.out
Characters 78-80:
  | hd::tl -> tl :: listReverse hd;;
                                ^^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
